put another two div in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <div>
             Contents of Home Page
         </div>
+        <div>
+            Another Content of home page
+        </div>
+        <div>
+            Another Content of home page 2
+        </div>
     </div>
 </body>
 </html>
