--- a/about.html
+++ b/about.html
@@ -8,20 +8,12 @@
 <body>
     <div>
         <div>
-            <h1>Home</h1>
+            <h1>About</h1>
         </div>
         <div>
-            Contents of Home Page
+            Contents of About Page
         </div>
-        <div>
-            Another Content of home page
-        </div>
-        <div>
-            Another Content of home page 2
-        </div>
-        <div>
-            <p>This is a paragraph</p>
-        </div>
+        
     </div>
 </body>
 </html>
