add a para in about.html

--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@
         <div>
             Contents of About Page
         </div>
-        
+        <div>
+            <p>This is a paragraph in about.html</p>
+        </div>
     </div>
 </body>
 </html>
