add para 2 in about.html

--- a/about.html
+++ b/about.html
@@ -16,6 +16,9 @@
         <div>
             <p>This is a paragraph in about.html</p>
         </div>
+        <div>
+            <p>This is para 2 in about.html</p>
+        </div>
     </div>
 </body>
 </html>
