new file pratick2.html in pratick branch

--- a/pratick2.html
+++ b/pratick2.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-       <h2>Abeda</h2>
+<div>
+    <h2>pratick2</h2>
 
-    </div>
+</div>
 
-    <div>
-        <p>This is abeda !!!</p>
-    </div>
+<div>
+    <p>This is pratick2 !!!</p>
+</div>
 </body>
 </html>
