add mrettika2.html file in mrettika branch

--- a/Abeda2.html
+++ b/Abeda2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>mrettika</h2>
-    <p> this is mrettika2 file. </p>
+    <h2>Abeda 2</h2>
+    <p>This is abeda 2 file</p>
 </body>
 </html>
