--- a/Sadman2.html
+++ b/Sadman2.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 <body>
-    <h2>mrettika</h2>
-    <p> this is mrettika2 file. </p>
+    <h2>Github</h2>
+    <p>Todays class is on github. How to use it and all about it</p>
 </body>
 </html>
