--- a/anik.html
+++ b/anik.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>mrettika</h2>
-    <p> this is mrettika2 file. </p>
+    <div>
+        <div>
+            <h2>Anik</h2>
+        </div>
+        <div>
+            <p>This is anik !!!</p>
+        </div>
+    </div>
 </body>
 </html>
