--- a/anik2.html
+++ b/anik2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>mrettika</h2>
-    <p> this is mrettika2 file. </p>
+    <h2>Anik 2</h2>
+    <p>This is anik 2 file.</p>
 </body>
 </html>
