--- a/mohsin2.html
+++ b/mohsin2.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>mrettika</h2>
-    <p> this is mrettika2 file. </p>
+    <div>
+        <h1>mohsin 2</h1>
+    </div>
+    <div>
+        <p>This is mohsin 2 File</p>
+    </div>
+
 </body>
 </html>
