--- a/Sadman.html
+++ b/Sadman.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>New Branch</title>
 </head>
 <body>
-    <h2>mrettika</h2>
-    <p> this is mrettika2 file. </p>
+    
 </body>
 </html>
