--- a/mrettika2.html
+++ b/mrettika2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>mrettika</h2>
-    <p> this is mrettika2 file. </p>
+    <h2> mrettika </h2>
+    <p> thia is mrettika2 file. </p>
 </body>
 </html>
