delete four files,add about.html,index.html

--- a/about.html
+++ b/about.html
@@ -6,11 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>About</h1>
+    <div> Contents of About</div>
+
     <div>
-        <div>
-            <h2>zahed 2</h2>
-            <p>this is zahed 2 file</p>
-        </div>
+<p>This is a paragraph of About</p>
+    </div>
+    <div>
+        <p>This is a paragraph2 of About </p>
     </div>
 </body>
 </html>
