add nazifa2.html file in nazifa branch

--- a/index.html
+++ b/index.html
@@ -8,25 +8,20 @@
 <body>
     <div>
         <div>
-
             <h1>Home</h1>
-
-        </div>
-        <div> Content of home page
-
-        </div>
-            
-        <div>
-            Another content of home page
         </div>
         <div>
-            Another content of home page 2
-
+            Contents of Home Page
         </div>
         <div>
-             <p>This is a paragraph</p>
+            Another Content of home page
         </div>
-
+        <div>
+            Another Content of home page 2
         </div>
+        <div>
+            <p>This is a paragraph</p>
+        </div>
+    </div>
 </body>
 </html>
