--- a/nazifa2.html
+++ b/nazifa2.html
@@ -6,16 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-
-        <div>
-<h2>nazifa</h2>
-        
-        </div>
-        <div>
-
-        <p> this is nazifa   </p>
-        </div>
-    </div>
+    <h2> nazifa 2</h2>
+    <p>this is nazifa2 file</p>
 </body>
 </html>
